# mixr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  THIRD_PARTY_LICENSES.md  build.rs  cliff.toml  dist-workspace.toml  run.ps1  run.sh  start-launcher.sh
.claude/: settings.json
.claude/agents/: audio-reviewer.md  code-simplifier.md  crash-investigator.md  doc-updater.md  dsp-designer.md  log-analyzer.md  mix-quality.md  performance-profiler.md  refactor-planner.md  test-writer.md
.claude/rules/: audio.md  rust.md  tui.md
.claude/skills/: dj-monitor.md  dj.md  mix.md
.github/: PULL_REQUEST_TEMPLATE.md  build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-homebrew-tap.yml  ci.yml  package-linux.yml  release-plz.yml  release.yml  winget-releaser.yml
.local/: PLAN.md
docs/: COMMAND_MIGRATION.md  notarization.md
examples/: midi_capture.rs  midi_hid_probe.rs  midi_one.rs
findings/mixr-hunt-2026-06-08/: findings.md
nfpm/: mixr.yaml
presets/: generic-2-channel.midi-map.json  numark-mixstream-pro.midi-map.json
scripts/: Info-nightly.plist  Info.plist  browse_tree.sh  build-app.sh  build-dmg.sh  click_drag_smoke.sh  keybind_smoke.sh  launcher-nightly.sh  launcher.sh  send-release-newsletter.sh  smoke.sh
scripts/icon/: AppIcon-nightly.icns  AppIcon.icns  build.sh  gen_icon.swift
scripts/og/: gen_og.swift
site/: .docs-sync-marker  astro.config.mjs
site/src/assets/demos/: first-mix.tape
site/src/content/docs/: changelog.mdx  family.mdx  getting-started.md  index.mdx  install.md  install.mdx  troubleshooting.md
site/src/content/docs/manual/: ai-dj.mdx  controllers.mdx  getting-started.mdx  ipc-scripting.mdx  library-imports.mdx  mixing.mdx
src/: config.rs  family_offer.rs  favorites.rs  hid.rs  ipc.rs  library_import.rs  local_library.rs  log.rs  main.rs  midi.rs  platform.rs  session.rs  update_check.rs  usb_libraries.rs
src/audio/: ai_beat.rs  analyzer.rs  beat_grid.rs  crossfade.rs  deck.rs  engine.rs  fill_output.rs  mixer.rs  mod.rs  pitch_stretch.rs  profiler.rs  status.rs  transition.rs  transition_rules.rs
src/beatport/: api.rs  auth.rs  catalog.rs  mod.rs  models.rs  stream.rs  webview_client.rs  webview_host.rs
src/claude/: api.rs  dj.rs  memory.rs  mod.rs
src/tui/: app.rs  blit.rs  claude_screen.rs  command.rs  dashboard.rs  dj_bridge.rs  download.rs  ipc_handler.rs  keymap.rs  keys.rs  midi_learn.rs  mod.rs  rules_editor.rs  screens.rs  settings.rs  theme.rs  toast.rs
wix/: main.wxs
